<resources>
    <string name="app_name">Test 1</string>
    <string name="eve_AddEvent">Add Event</string>
    <string name="eve_ListEvent">List Event</string>
    <string name="eve_msgErrorCaptureImg">Failed Capture Image</string>
    <string name="eve_msgErrorPickImg">Failed Pick Image</string>
    <string name="eve_TakePhoto">Add photo of Event</string>
    <string name="eve_ChooseGallery">Choose Gallery</string>
    <string name="eve_AddPhoto2">Add Photo</string>
    <string name="eve_msgCameraPermissionDenied">Camera Permission Denied</string>
    <string name="eve_msgCameraAppAvailable">Camera App Available</string>
    <string name="eve_msgSave">Save</string>
    <string name="eve_msgMissingData">Missing Data</string>
    <string name="eve_msgDelete">Delete</string>
    <string name="eve_EventID">Event ID</string>
    <string name="eve_Institution">Institution</string>
    <string name="eve_EventLocation">Event Location</string>
    <string name="eve_DateTime">Date</string>
    <string name="eve_SeatNumber">Seat Number</string>
    <string name="eve_EventType">Event Type</string>
    <string name="eve_FirstName">First Name</string>
    <string name="eve_LastName">Last Name</string>
    <string name="eve_Phone">Phone</string>
    <string name="eve_Email">Email</string>
    <string name="eve_Address">Address</string>
    <string name="eve_Country">Country</string>
    <string name="eve_ImageEvent">Image the Event</string>
    <string name="eve_mnu_save">Save</string>
    <string name="eve_mnu_delete">Delete</string>
    <string name="eve_mnu_cancel">Cancel</string>
    <string name="rec_button_register">Register Data</string>
    <string name="rec_button_list">View Record List</string>
    <string name="rec_hint_name">Full Name</string>
    <string name="rec_hint_last_name">Last Name</string>
    <string name="rec_hint_phone">Phone</string>
    <string name="rec_hint_email">Email</string>
    <string name="rec_hint_address">Address</string>
    <string name="rec_hint_country">Country</string>
    <string name="rec_hint_province">Province</string>
    <string name="rec_hint_canton">Canton</string>
    <string name="rec_hint_district">District</string>
    <string name="rec_hint_salary">Wage Expectation</string>
    <string name="rec_hint_experience">Years of Experience</string>
    <string name="rec_role_prompt">Role of Interest</string>
    <string name="rec_button_save">Save</string>
    <string name="rec_role_software">Software</string>
    <string name="rec_role_infrastructure">Infrastructure</string>
    <string name="rec_role_networks">Networks</string>
    <string name="rec_role_security">Security</string>
    <string name="rec_role_qa">QA</string>
    <string name="rec_data_saved">Data saved successfully</string>
    <string name="rec_fill_all_fields">Please complete all fields</string>
    <string name="rec_list_title">Record List</string>
    <string name="rec_no_records">No records available</string>
    <string name="rec_detail_name">Name:</string>
    <string name="rec_detail_phone">Phone:</string>
    <string name="rec_detail_email">Email:</string>
    <string name="rec_detail_address">Address:</string>
    <string name="rec_detail_country">Country:</string>
    <string name="candidate_photo">Photo of the candidate</string>
    <string name="candidate_name">Name of the candidate</string>
    <string name="selected_image_preview">Selected Image Preview</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="candidate_photo_desc">Photo of the candidate</string>
    <string name="sub_title">Auction</string>
    <string name="sub_btn_imagenadd">Add image</string>
    <string name="sub_nameperson">Name</string>
    <string name="sub_LastNperson">Last Name</string>
    <string name="sub_Phoneperson">Phone number</string>
    <string name="sub_emailperson">Email</string>
    <string name="sub_Addressperson">Address</string>
    <string name="sub_Countryperson">Country</string>
    <string name="sub_about_Auction">Information about the Auction</string>
    <string name="sub_date">Date</string>
    <string name="sub_hour">Hour</string>
    <string name="sub_amout">Amount</string>
    <string name="sub_desc">Description</string>
    <string name="sub_selled_Question">Selled</string>
    <string name="sub_addBTN">Add</string>
    <string name="sub_gointToadd">Add person</string>
    <string name="sub_GointTo_list">Gonna show list</string>
    <string name="sub_photo_select">Camera</string>
    <string name="sub_gallery_select">Gallery</string>
    <string name="sub_selectOption">Select an Option</string>
    <string name="subCode">Cod</string>
    <string name="sub_success">Success</string>
    <string name="subadd">Save</string>
    <string name="tcam_PersonName">Full name</string>
    <string name="tcam_DateTime">Date and Time</string>
    <string name="tcam_ValueChange">exchange rate value</string>
    <string name="tcam_CalculateAmount">Calculate amount to pay</string>
    <string name="tcam_AmountPay">Amount to pay:</string>
    <string name="tcam_AmountChange">Amount to change</string>
    <string name="tcam_addChange">Add Type change</string>
    <string name="tcam_ViewChanges">View Types of changes</string>
    <string name="tcam_Menu_Save">Save</string>
    <string name="tcam_Menu_Delete">Delete</string>
    <string name="tcam_Menu_Cancel">Cancel</string>
    <string-array name="exchange_type_array">
        <item>Dollars to colones</item>
        <item>Colones to Dollars</item>
    </string-array>
    <string name="ema_btnaddemail">Add Email</string>
    <string name="ema_btnviewemail">View List Email</string>
    <string name="mnusave">Save</string>
    <string name="mnuremove">Remove</string>
    <string name="mnucancel">Cancel</string>
    <string name="EmailContactId">Person ID</string>
    <string name="EmailMessage">Email Message</string>
    <string name="EmailTitle">Email Title</string>
    <string name="EmailSendDate">Send Date </string>
    <string name="EmailCC">CC </string>
    <string name="EmailBCC">CCO </string>
    <string name="buttonSave">Save</string>
    <string name="msgSave">Inf save</string>
    <string name="msgMissingData">Data is no fount</string>
    <string name="msgDelete">Delete</string>
    <string name="msgEmailIdMissing">Email Missing</string>
    <string name="ema_EmailImage">Image</string>
    <string name="ema_msgdate">The date must be later than the current date.</string>
    <string name="ema_formdate">Invalid date format. Use the format yyyy-MM-dd.</string>
    <string name="ema_msgcomplete">Please complete all required fields.</string>
    <string name="ema_confdel">Confirm deletion</string>
    <string name="ema_msgdelconf">Are you sure you want to delete this email?</string>
    <string name="ema_yes">Yes</string>
    <string name="ema_no">No</string>
    <string name="ema_confupdate">Confirm update</string>
    <string name="ema_msgconfupdate">Are you sure you want to update this email?</string>
    <string name="ema_msgUpdateSuccess">Email updated successfully</string>
    <string name="ema_msgErrorCaptureImg">Error Capture Image</string>
    <string name="ema_msgErrorPickImg">Error Pick Image</string>
    <string name="Cen_addcensus">add new person</string>
    <string name="Cen_viewcensus">view census list</string>
    <string name="cen_Userid">Contact ID</string>
    <string name="cen_name">Name</string>
    <string name="Cen_Phone">Phone</string>
    <string name="Cen_LastName">Last Name</string>
    <string name="Cen_Email">Email</string>
    <string name="Cen_Address">Address</string>
    <string name="Cen_Province">Province</string>
    <string name="Cen_Canton">Canton</string>
    <string name="Cen_District">District</string>
    <string name="Cen_mn_save">save</string>
    <string name="Cen_menu_delete">Delete</string>
    <string name="Cen_mn_cancel">Cancel</string>
    <string name="Cen_msg_notFound">Not Found</string>
    <string name="Cen_msg_sure">sure</string>
    <string name="Cen_msg_ready">Ready</string>
    <string name="Cen_No">No</string>
    <string name="Cen_msg_update">Update</string>
    <string name="Cen_msg_save_user">Save user</string>
    <string name="Cen_msg_missing_data">missing Data</string>
    <string name="Cen_user_exist">User exist</string>
    <string name="Cen_much_text">much text</string>
    <string name="Cen_not_email">email not accepted</string>
    <string name="Cen_much_number">much number</string>
    <string name="Cen_array_menu">Service</string>
    <string name="Cen_save_service">Save Service</string>
    <string name="Cen_camera">Photo</string>
    <string name="Cen_take_photo">photo</string>
    <string name="Cen_take_gallery">Gallery</string>
    <string name="Cen_fout_image">Image</string>
    <string name="nav_btn_main_list">Container List</string>
    <string name="nav_btn_main_control">Container control</string>
    <string name="nav_btn_img">Seleccion image</string>
    <string name="welcome">Welcome</string>
    <string name="Succesins">Succes insert</string>
    <string name="Succesdel">Succes delete</string>
    <string name="Succesupd">Succes update</string>
    <string name="msgErr">Container not found</string>
    <string name="msgContDup">Container duplicated</string>
    <string name="nav_id_container">Container Id</string>
    <string name="cap_TrainingID">ID</string>
    <string name="cap_TrainingName">Name</string>
    <string name="cap_LastName">Last Name</string>
    <string name="cap_TrainingPhone">Phone</string>
    <string name="cap_TrainingEmail">Email</string>
    <string name="cap_TrainingAddress">Address</string>
    <string name="cap_TrainingCountry">Country</string>
    <string name="cap_TrainingCourseCode">Course Code</string>
    <string name="cap_TrainingDescription">Description</string>
    <string name="cap_TrainingHours">Hours</string>
    <string name="cap_TrainingDate">Date</string>
    <string name="cap_TrainingPhoto">Training Photo</string>
    <string name="cap_AddPhoto">Add photo of Classroom/Laboratory</string>
    <string name="cap_AddPhoto2">Add Photo</string>
    <string name="vac_name_hint">Name</string>
    <string name="vac_last_name_hint">Last Name</string>
    <string name="vac_phone_hint">Phone</string>
    <string name="vac_email_hint">Email</string>
    <string name="vac_address_hint">Address</string>
    <string name="vac_country_hint">Country</string>
    <string name="vac_vaccine_type_hint">Vaccine Type</string>
    <string name="vac_vaccination_date_hint">Vaccination Date</string>
    <string name="vac_btn_save">Save</string>
    <string name="vac_txtItem_name">Full Name</string>
    <string name="vac_txtItem_vaccine_type">Vaccine Type</string>
    <string name="vac_txtItem_vaccination_date">Vaccination Date</string>
    <string name="vac_vaccination_time_hint">Vaccination Time</string>
    <string name="vac_select_photo">Select Photo</string>
    <string name="vac_photo">Photo</string>
    <string name="bib_save">Save</string>
    <string name="bib_cancel">Cancel</string>
    <string name="bib_remove">Remove</string>
    <string name="sin_label_origin_person">Origin Person: </string>
    <string name="sin_label_destination_name">Destination Name: </string>
    <string name="sin_label_amount">Amount: </string>
    <string name="sin_label_date_time">Date: </string>
    <string name="sin_save">Save</string>
    <string name="sin_hint_origin_person">Origin Person</string>
    <string name="sin_hint_phone_number">Phone Number</string>
    <string name="sin_hint_destination_name">Destination Name</string>
    <string name="sin_hint_amount">Amount</string>
    <string name="sin_hint_description">Description</string>
    <string name="sin_hint_date_time">Date</string>
    <string name="sin_sin_photo">Photo</string>
    <string name="sin_take_photo">Take Photo</string>
    <string name="sin_choose_from_gallery">Choose from Gallery</string>
</resources>