<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sin_crud_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/sin_origin_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sin_hint_origin_person"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/sin_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sin_hint_phone_number"
            android:inputType="phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/sin_destination_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sin_hint_destination_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/sin_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sin_hint_amount"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/sin_description"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:hint="@string/sin_hint_description"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <EditText
            android:id="@+id/sin_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/sin_hint_date_time"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/sin_btn_save_sinpe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sin_save"
            android:layout_marginTop="16dp" />

        <!-- Vista para mostrar la imagen seleccionada o tomada -->
        <ImageView
            android:id="@+id/sin_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/sin_sin_photo" />

        <!-- Botón para tomar una foto -->
        <Button
            android:id="@+id/sin_btn_select_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sin_take_photo"
            android:layout_marginTop="8dp" />

        <!-- Botón para seleccionar foto desde la galería -->
        <Button
            android:id="@+id/btn_select_from_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sin_choose_from_gallery"
            android:layout_marginTop="16dp" />





    </LinearLayout>

</ScrollView>
