<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Cen_mn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Cen_mn_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/Cen_mn_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:title="@string/Cen_menu_delete"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/Cen_mn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Cen_mn_cancel"
        app:showAsAction="always" />
</menu>