<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">


    <ImageView
        android:id="@+id/vac_imgItem_Photo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/vac_photo"
        android:scaleType="centerCrop"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vac_txtItem_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vac_txtItem_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vac_txtItem_VaccineType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vac_txtItem_vaccine_type"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/vac_txtItem_VaccinationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vac_txtItem_vaccination_date"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>
